# cricket99

./: Cargo.toml  pyproject.toml
src/: lib.rs
src/cricket99/: __init__.py
src/cricket99/differential/: __int__.py  discrete.py
